[project]
name = "effect-ledger"
version = "0.0.1"
description = "Idempotency and audit ledger for AI agent tool calls"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Rune0", email = "team@rune0.com" }
]
keywords = [
    "idempotency",
    "ledger",
    "ai-agents",
    "tool-calls",
    "audit",
    "governance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "cachetools>=5.3.0",
    "rfc8785>=0.1.2",
    "opentelemetry-api>=1.20.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary,pool]>=3.1.0",
]
asyncpg = [
    "asyncpg>=0.29.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]
all = [
    "effect-ledger[postgres,dev]",
]

[project.urls]
Homepage = "https://github.com/rune0/effect-ledger-py"
Documentation = "https://github.com/rune0/effect-ledger-py#readme"
Repository = "https://github.com/rune0/effect-ledger-py"
Issues = "https://github.com/rune0/effect-ledger-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["effect_ledger"]

[tool.hatch.build.targets.sdist]
include = [
    "/effect_ledger",
    "/tests",
    "/examples",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["effect_ledger", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH", "RUF"]
ignore = ["E501", "B008", "ARG001", "ARG002", "TCH003"]

[tool.ruff.lint.isort]
known-first-party = ["effect_ledger"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "."

[[tool.mypy.overrides]]
module = [
    "cachetools.*",
    "psycopg.*",
    "psycopg_pool.*",
    "asyncpg.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["effect_ledger"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=effect_ledger --cov-report=term-missing --cov-report=xml {args:tests}"
lint = "ruff check effect_ledger/ tests/"
lint-fix = "ruff check effect_ledger/ tests/ --fix"
format = "ruff format effect_ledger/ tests/"
format-check = "ruff format --check effect_ledger/ tests/"
typecheck = "mypy effect_ledger/"
check = ["lint", "format-check", "typecheck", "test"]
all = ["lint", "format", "typecheck", "test-cov"]
